--- a/scss/_voice.scss
+++ b/scss/_voice.scss
@@ -2,48 +2,56 @@
 @use "./base" as *;
 
 .voice {
-
   header {
     background-color: transparent;
   }
 
-  .voice-fv {
+  #fv {
     position: relative;
-    padding-block: 50px;
-    margin-top: 80px;
+    margin-top: 130px;
+
+    @include mx.sp {
+      margin-top: 50px;
+    }
 
     .section-title__en {
       font-size: 150px;
       font-weight: 900;
       color: $light-grey;
       position: absolute;
-      left: 0;
-      bottom: -20px;
+      left: -10px;
+      bottom: -100px;
       z-index: 0;
 
       @include mx.tb {
-        font-size: 70px;
+        left: 30px;
       }
-
+      @include mx.sp-650 {
+        font-size: 100px;
+      }
       @include mx.sp {
-        font-size: 50px;
+        font-size: 80px;
+        left: 10px;
+        bottom: -50px;
       }
     }
 
     .section-title {
-      display: inline-block;
-      position: relative;
       color: $black;
+      position: relative;
 
       &::before {
         content: "";
         position: absolute;
-        width: 90%;
-        height: 2px;
-        left: 5%;
         bottom: -10px;
+        width: 150px;
+        height: 2px;
         background-color: $yellow;
         border-radius: 2px;
+
+        @include mx.tb {
+          left: 1%;
+        }
       }
     }
   }
@@ -51,11 +59,15 @@
   .voices {
     margin-block: 100px 150px;
     @include mx.sp {
-      margin-block: 80px ;
+      margin-block: 80px;
     }
 
     .wrapper {
       margin-bottom: 0px;
+
+      @include mx.sp-650 {
+        padding-inline: 15px;
+      }
     }
 
     .list {
@@ -153,7 +165,7 @@
 
       @include mx.tb {
         height: 90vh;
-        padding-inline: 50px;
+        padding-inline: 30px;
         margin-inline: 20px;
       }
     }
@@ -274,6 +286,7 @@
 
           img {
             object-fit: cover;
+            border-radius: 5px;
             box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
           }
 
@@ -308,67 +321,230 @@
   }
 
   .metaleaf {
+    height: 780px;
     margin-top: -200px;
+    margin-bottom: 100px;
+
+    @include mx.tb-1100 {
+      height: 750px;
+    }
 
     @include mx.tb {
       margin-top: -300px;
+      margin-bottom: 300px;
+    }
+
+    @include mx.sp-650 {
+      margin-bottom: 100px;
+    }
+
+    @include mx.sp {
+      margin-bottom: 50px;
     }
 
     .wrapper {
+      height: 100%;
       display: flex;
       justify-content: space-between;
+
+      @include mx.tb-1100 {
+        padding-inline: 15px;
+      }
 
       @include mx.tb {
         flex-direction: column;
       }
 
-      .section-title {
-        span {
-          position: relative;
-          display: block;
-          font-size: $fs-small;
-          margin-top: 10px;
-          margin-left: 20px;
+      .left {
+        width: 30%;
 
-          &::before {
-            width: 8px;
-            height: 8px;
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: -14px;
-            transform: translateY(-50%);
-            background-color: $yellow;
-            border-radius: 50%;
+        @include mx.tb {
+          width: 100%;
+        }
+
+        .section-title {
+          span {
+            position: relative;
+            display: block;
+            font-size: $fs-small;
+            margin-top: 10px;
+            margin-left: 20px;
+
+            &::before {
+              width: 8px;
+              height: 8px;
+              content: "";
+              position: absolute;
+              top: 50%;
+              left: -14px;
+              transform: translateY(-50%);
+              background-color: $yellow;
+              border-radius: 50%;
+            }
+          }
+        }
+        p {
+          span {
+            display: block;
+            font-size: $fs-small;
+            margin-top: 20px;
+          }
+        }
+        .btn {
+          display: inline-block;
+          color: $white;
+          border-radius: 50px;
+          border: 1px solid $white;
+          background: $yellow;
+          transition: all 0.5s ease;
+          padding: 5px 20px;
+          margin-top: 30px;
+
+          &:hover {
+            background-color: $white;
+            border: 1px solid $yellow;
+            color: $yellow;
           }
         }
       }
 
       .list {
         width: 70%;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 25px;
+        height: 100%;
+        position: relative;
 
         @include mx.tb {
           width: 100%;
         }
 
-        img {
-          border-radius: 10px;
-          box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
-        }
+        li {
+          position: absolute;
 
-        .text {
-          font-size: $fw-medium;
-          font-weight: bold;
-          // color: $yellow;
+          &:nth-child(1) {
+            width: 38%;
+            top: 2%;
+            right: 25%;
 
-          span {
-            display: block;
-            font-size: $fs-small;
-            font-weight: normal;
-            color: $border-grey;
+            @include mx.tb {
+              width: 45%;
+              top: -20%;
+              right: 15%;
+            }
+
+            @include mx.sp-650 {
+              right: 0;
+            }
+          }
+
+          &:nth-child(2) {
+            width: 30%;
+            top: 25%;
+            left: 3%;
+
+            @include mx.tb {
+              top: 15%;
+            }
+
+            @include mx.sp-650 {
+              left: 10%;
+              top: 5%;
+            }
+          }
+
+          &:nth-child(3) {
+            width: 50%;
+            right: 5%;
+            bottom: -5%;
+
+            @include mx.tb {
+              bottom: -95%;
+            }
+
+            @include mx.sp-650 {
+              bottom: -50%;
+            }
+
+            @include mx.sp {
+              right: 5%;
+              bottom: -25%;
+            }
+          }
+
+          &:nth-child(4) {
+            width: 40%;
+            top: 33%;
+            right: 0;
+
+            @include mx.tb {
+              top: 50%;
+            }
+
+            @include mx.sp-650 {
+              top: 35%;
+            }
+
+            @include mx.sp {
+              top: 30%;
+            }
+          }
+
+          &:nth-child(5) {
+            width: 40%;
+            left: -5%;
+            bottom: 0;
+
+            @include mx.tb {
+              width: 35%;
+              left: 0;
+              bottom: -55%;
+            }
+
+            @include mx.sp-650 {
+              bottom: -30%;
+            }
+
+            @include mx.sp {
+              left: 2%;
+              bottom: -15%;
+            }
+          }
+
+          &:nth-child(6) {
+            width: 15%;
+            top: 40%;
+            left: 38%;
+
+            @include mx.tb {
+              top: 50%;
+              left: 40%;
+            }
+
+            @include mx.sp {
+              top: 35%;
+            }
+
+            img {
+              box-shadow: none;
+            }
+          }
+
+          img {
+            width: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
+          }
+
+          .text {
+            font-size: $fw-medium;
+            font-weight: bold;
+
+            span {
+              display: block;
+              font-size: $fs-small;
+              font-weight: normal;
+              color: $border-grey;
+            }
           }
         }
       }
@@ -395,6 +571,7 @@
 
       @include mx.tb {
         flex-direction: column;
+        padding-inline: 40px;
       }
 
       .left {
@@ -409,6 +586,10 @@
 
         .section-title {
           margin-top: 100px;
+
+          @include mx.sp {
+            margin-top: 50px;
+          }
 
           span {
             position: relative;
@@ -446,7 +627,7 @@
           border-radius: 50px;
           border: 1px solid $white;
           background: $yellow;
-          transition: .4s ease;
+          transition: 0.4s ease;
           padding: 5px 20px;
           transition: all 0.5s ease;
 
@@ -464,7 +645,7 @@
 
         @include mx.tb {
           width: 100%;
-          height: 100vh;
+          height: 100%;
           background: $blue;
           border-radius: 20px;
         }
@@ -472,7 +653,6 @@
         .vertical-slider {
           width: 50%;
           height: 100%;
-          /* 好きな高さ */
           overflow: hidden;
 
           @include mx.tb {
